# media-search-solution

./: .bazelrc  .gcloudignore  .gitignore  BUILD.bazel  CHANGELOG.md  Dockerfile  MODULE.bazel  NOTICE  README.md  WORKSPACE  go.mod  go.sum  owners.txt  video-warehouse.code-workspace
configs/: .env.toml  BUILD.bazel  example_.env.local.toml  example_.env.test.toml  test_prompt.test
docs/: CodeOfConduct.md  CodeStyleGuide.md  Contributors.md  DeveloperSetup.md  PromptConfiguration.md  README.md  SettingUpIntelliJ.md  SettingUpVisualStudioCode.md  WorkstationSetup.md
pkg/cloud/: BUILD.bazel  config.go  gcs.go  pub_sub_listener.go  state.go  templates.go  utils.go  wrappers.go
pkg/commands/: BUILD.bazel  ffmpeg.go  media_assembly.go  media_config_update.go  media_content_type.go  media_length.go  media_persist_to_big_query.go  media_summary_creator.go  media_summary_json_to_struct.go  media_trigger_reader.go  scene_extractor.go
pkg/cor/: BUILD.bazel  base_chain.go  base_command.go  base_context.go  interfaces.go
pkg/model/: BUILD.bazel  examples.go  persistent.go  schemas.go  transient.go
pkg/services/: BUILD.bazel  media.go  queries.go  search.go
pkg/telemetry/: BUILD.bazel  setup_logging.go  setup_trace.go
pkg/workflow/: BUILD.bazel  media_config_update_workflow.go  media_embedding_generator_workflow.go  media_reader_workflow.go  media_resize_workflow.go
scripts/: cleanup_media_file.sh  deploy_media_search.sh  gcloud_login.sh  setup_terraform.sh
test/: BUILD.bazel  README.md  test.go
test/cloud/: BUILD.bazel  config_test.go  pubsub_listener_test.go
test/model/: BUILD.bazel  persistent_test.go
test/services/: BUILD.bazel  search_service_test.go
test/workflow/: BUILD.bazel  base_test.go  media_embedding_test.go  media_ingestion_test.go  media_resize_test.go
web/apps/: .placeholder
web/apps/api_server/: BUILD.bazel  README.md  api_server.go  dashboard.go  file_upload.go  listeners.go  media.go  setup.go
web/apps/media-search/: .bazelignore  .npmrc  BUILD.bazel  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.mts
web/apps/media-search/public/: BUILD.bazel
web/apps/media-search/src/: App.tsx  BUILD.bazel  index.css  main.tsx  vite-env.d.ts
web/apps/media-search/src/components/: Cast.tsx  Footer.tsx  LoadingIcon.tsx  MediaResults.tsx  MediaRow.tsx  SceneData.tsx  SearchBar.tsx  TopNav.tsx
web/apps/media-search/src/pages/: Dashboard.tsx  FileUpload.css  FileUpload.tsx  Search.tsx
web/apps/media-search/src/shared/: model.ts
