# Copyright 2024 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Author: rrmcguinness (Ryan McGuinness)
#         kingman (Charlie Wang)

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cloud",
    srcs = [
        "config.go",
        "gcs.go",
        "pub_sub_listener.go",
        "state.go",
        "templates.go",
        "utils.go",
        "wrappers.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/solutions/media/pkg/cloud",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cor",
        "@com_github_burntsushi_toml//:toml",
        "@com_google_cloud_go_bigquery//:bigquery",
        "@com_google_cloud_go_pubsub//:pubsub",
        "@com_google_cloud_go_storage//:storage",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@org_golang_google_genai//:genai",
        "@org_golang_x_time//rate",
    ],
)
