# Copyright 2024 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Author: rrmcguinness (Ryan McGuinness)
#         kingman (Charlie Wang)

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "services",
    srcs = [
        "media.go",
        "queries.go",
        "search.go",
    ],
    data = [
        "//:copy_ffmpeg",
        "//configs:.env.local.toml",
        "//configs:.env.toml",
    ],
    importpath = "github.com/GoogleCloudPlatform/solutions/media/pkg/services",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/model",
        "@com_google_cloud_go_bigquery//:bigquery",
        "@org_golang_google_api//iterator",
        "@org_golang_google_genai//:genai",
    ],
)
