load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "telemetry",
    srcs = [
        "setup_logging.go",
        "setup_trace.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/solutions/media/pkg/telemetry",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cloud",
        "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_metric//:metric",
        "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace//:trace",
        "@io_opentelemetry_go_contrib_detectors_gcp//:gcp",
        "@io_opentelemetry_go_contrib_propagators_autoprop//:autoprop",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//semconv/v1.4.0:v1_4_0",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
