# Copyright 2024 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "workflow",
    srcs = [
        "media_embedding_generator_workflow.go",
        "media_reader_workflow.go",
        "media_resize_workflow.go",
    ],
    data = [
        "//:copy_ffmpeg",
        "//configs:.env.local.toml",
        "//configs:.env.toml",
    ],
    importpath = "github.com/GoogleCloudPlatform/solutions/media/pkg/workflow",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cloud",
        "//pkg/commands",
        "//pkg/cor",
        "//pkg/model",
        "@com_google_cloud_go_bigquery//:bigquery",
        "@com_google_cloud_go_storage//:storage",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//codes",
        "@org_golang_google_api//iterator",
        "@org_golang_google_genai//:genai",
    ],
)
