load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "services_test",
    srcs = ["search_service_test.go"],
    data = [
        "//:copy_ffmpeg",
        "//configs:.env.test.toml",
        "//configs:.env.toml",
    ],
    rundir = ".",
    deps = [
        "//pkg/cloud",
        "//pkg/services",
        "//test",
        "@com_github_zeebo_assert//:assert",
    ],
)
